# tile

./: CLAUDE.md  Cargo.toml  README.md
crates/tile_ax/: Cargo.toml
crates/tile_ax/src/: accessibility.rs  lib.rs  observer.rs  screen.rs  window.rs
crates/tile_core/: Cargo.toml
crates/tile_core/src/: layout.rs  lib.rs  tree.rs  types.rs
crates/tile_hotkeys/: Cargo.toml
crates/tile_hotkeys/src/: keycodes.rs  lib.rs
crates/tile_overlay/: Cargo.toml
crates/tile_overlay/src/: lib.rs
crates/tile_settings/: Cargo.toml
crates/tile_settings/src/: config.rs  lib.rs  window.rs
src/: app.rs  drag.rs  main.rs  settings_main.rs
src/app/: actions.rs  menu.rs  observe.rs  state.rs  window_search.rs
src/drag/: mod_target.rs
