[package]
name = "tile_ax"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tile_core = { path = "../tile_core" }
log = "0.4"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSDictionary",
    "NSValue",
    "NSGeometry",
    "NSThread",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSScreen",
    "NSWorkspace",
    "NSRunningApplication",
    "NSEvent",
    "NSGraphics",
] }
core-foundation = "0.10"
core-graphics = "0.24"
