[package]
name = "tile_hotkeys"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tile_core = { path = "../tile_core" }
log = "0.4"
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
