[package]
name = "tile_settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tile_core = { path = "../tile_core" }
gpui = "0.2"
crepuscularity-gpui = { path = "../../../crepuscularity/crates/crepuscularity-gpui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
dirs = "5"
